# TinyServer

./: .clang-format  CODE_STYLE.md  README.md
docker/: dockerfile-cpp-env-1.0.7
src/: CMakeLists.txt
src/base/: CMakeLists.txt  Global.cpp  Global.h  Misc.h  Properties.h  Random.h  TimeUtils.h  TimerUsage.h  asynctask.cpp  asynctask.h  compression.h  config.h  dual_lock_free_queue.h  encryption.h  io_context_pool.cpp  io_context_pool.h  logger.h  message.h  message_data.h  message_handler.h  message_ids.h  network.cpp  network.h  protobuf_util.cpp  protobuf_util.h  service.cpp  service.h  session_manager.cpp  session_manager.h  signal_handler.cpp  signal_handler.h  singleton.h  stringutil.cpp  stringutil.h  task_manager.h  tcp_client.cpp  tcp_client.h  tcp_task.cpp  tcp_task.h  timer_manager.cpp  (+4 more)
src/config/: config.ini  config_template.ini  dataserver.ini
src/dataserver/: CMakeLists.txt  config_manager.cpp  config_manager.h  data_processor.cpp  data_processor.h  data_server.cpp  data_server.h  data_task.cpp  data_task.h  data_task_manager.cpp  data_task_manager.h  main.cpp  mysql_connection_pool.cpp  mysql_connection_pool.h
src/examples/: CMakeLists.txt  network_example.cpp  network_test.cpp  singleton_example.cpp  timer_manager_example.cpp
src/gateway/: CMakeLists.txt  data_client.cpp  data_client.h  gate_task.cpp  gate_task.h  gate_task_manager.cpp  gate_task_manager.h  gate_user.cpp  gate_user.h  gate_user_manager.cpp  gate_user_manager.h  gateway_client.cpp  gateway_client.h  gateway_server.cpp  gateway_server.h  main.cpp  tiny_client.cpp  tiny_client.h
src/protos/: CMakeLists.txt  tiny.proto
src/scripts/: run.sh
src/tinyclient/: CMakeLists.txt  client_manager.cpp  client_manager.h  client_service.cpp  client_service.h  command_handler.cpp  command_handler.h  main.cpp  tinyclient.cpp  tinyclient.h
src/tinyserver/: CMakeLists.txt  main.cpp  tiny_task.cpp  tiny_task.h  tiny_task_manager.cpp  tiny_task_manager.h  tinyserver.cpp  tinyserver.h
src/tools/: CMakeLists.txt
src/tools/logs/: log_reader.cpp  log_reader.h  log_reader_example.cpp
